# aloe-desktop

./: .env.example  .gitignore  README.md  UPDATER.md  build_release.py  index.html  orb.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.tauri/: aloe.key  aloe.key.pub
scripts/: fetch-voice-assets.ps1
src/: main.tsx  orb.tsx  styles.css  toast.tsx  types.ts  vite-env.d.ts  web.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  orb.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  desktop.rs  executor.rs  fs.rs  lib.rs  main.rs  models.rs  notifications.rs  search.rs  socket.rs  terminal.rs
src-tauri/src/voice/: capture.rs  live.rs  mod.rs  wakeword.rs
src/components/: ActivityList.tsx  ApprovalsPanel.tsx  AuthScreen.tsx  ButterflyDecor.tsx  ConnectionPanel.tsx  DesktopTitleBar.tsx  FoldersPanel.tsx  SearchPanel.tsx
src/hooks/: useAutoUpdate.ts
src/shims/: next-link.tsx  next-navigation.ts
