[package]
name = "aloe-desktop"
version = "0.1.0"
description = "Aloe Desktop local agent"
authors = ["Aloe"]
edition = "2021"

[lib]
name = "aloe_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
futures-util = "0.3"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
notify-rust = "4.18"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
base64 = "0.22"

# Reduced debug info to keep dev-build artifacts smaller (this machine runs low on disk
# during iterative `tauri dev` rebuilds).
[profile.dev]
debug = "line-tables-only"
